# PatternsLab

./: Algorithms.cpp  CMakeLists.txt  Filter.h  ProxyFilter.h  RealFilter.cpp  RealFilter.h  TestPatterns.h  main.cpp
Adapter/: Adapter.h  OutsideProtection.h
Builder/: Builder.h  Director.h  LetterBuilder.h
Command/: BackupCommand.h  Command.h  InvokerCommand.h  ShowHistoryCommand.h  UndoBackupCommand.h
Composite/: Component.h  Composite.h  User.h
Content/: Audio.h  Content.h  Picture.h  Text.h
Decorator/: ContentFile.h  Decorator.h  DecoratorFile.h  DecoratorFilter.h  FilterPercentWrapper.h  FilterRecomendationWrapper.h
Delegation/: Algorithm.h  Algorithms.h  Delegate.h
Iterator/: IterableCollection.h  Iterator.h  IteratorContent.h
Memento/: ConfigHistory.h  Memento.h
Prototype/: ClonableCollection.h
Proxy/: Proxy.h  ProxyFilter.h  RealFilter.cpp
State/: ExecuteState.h  InitState.h  ReadyState.h  State.h  States.cpp
System/: Config.h  Filter.h  FilterResult.h  FilterTraining.cpp  FilterTraining.h  Letter.h  RealFilter.h
Visitor/: JSONExportVisitor.h  VisitableCollection.h  Visitor.h
